API CALL WORKING

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>The Greatest News App Ever</title>
+    <title>The Greatest Movie Store</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
       <strong>We're sorry but Site doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app">
-        <h3 class="text-center">VueNews</h3>
+
     </div>
     <!-- built files will be auto injected -->
 </body>
